fix: #827 adjusting CSS for word break in toolip

--- a/webapp/src/main/webapp/src/app/pages/services/{serviceId}/service-detail.page.css
+++ b/webapp/src/main/webapp/src/app/pages/services/{serviceId}/service-detail.page.css
@@ -32,3 +32,7 @@
 .conformance-index > dt {
   margin-bottom: 10px;
 }
+
+.tooltip-break {
+  word-break: break-word;
+}
